--- a/portfolio.html
+++ b/portfolio.html
@@ -10,39 +10,82 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
 
     <title>Portfolio</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Austin Lambert</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <!-- Navbar and links to other pages -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Austin Lambert</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
+    <!-- Main content containing Portfolio -->
+    <main class="container">
+        <!-- Header -->
+        <section class="row">
+            <div class="col-xs-12">
+                <h1>Portfolio</h1>
+            </div>
+        </section>
+        <!-- Portfolio Contents -->
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+            </div>
+        </section>
+        <section class="row">
 
+        </section>
+        <section class="row">
 
-
-
-    <br>
+        </section>
+    </main>
 
 
 
