--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
     <!-- Navbar and links to other pages -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="index.html">Austin Lambert</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -78,12 +78,6 @@
             <div class="col-xs-12 col-md-6">
                 <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
             </div>
-        </section>
-        <section class="row">
-
-        </section>
-        <section class="row">
-
         </section>
     </main>
 
