--- a/portfolio.html
+++ b/portfolio.html
@@ -49,36 +49,48 @@
                 <h1>Portfolio</h1>
             </div>
         </section>
+
+        <hr>
+
         <!-- Portfolio Contents -->
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
         </section>
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
         </section>
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
         </section>
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
             </div>
         </section>
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+            </div>
+        </section>
+
     </main>
 
 
