--- a/portfolio.html
+++ b/portfolio.html
@@ -55,39 +55,39 @@
         <!-- Portfolio Contents -->
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
-            </div>
-        </section>
-        <section class="row">
-            <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
         </section>
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
-            </div>
-        </section>
-        <section class="row">
-            <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
         </section>
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"></a>
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
         </section>
 
