--- a/index.html
+++ b/index.html
@@ -44,8 +44,35 @@
 
 
 
+    <!-- Main content of page -->
+    <main class="container">
+        <!-- Heading for About Me -->
+        <section class="row">
+            <div class="col-xs-12">
+                <h1>About Me</h1>
+            </div>
+        </section>
 
-    <br>
+        <hr>
+
+        <!-- About me -->
+        <section class="row">
+            <!-- Image of me -->
+            <div class="col-xs-12 col-md-4">
+                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/78549358_10218640124867680_136999651332063232_o.jpg?_nc_cat=106&_nc_sid=09cbfe&_nc_ohc=WxKlnNFBGUkAX_blNqx&_nc_ht=scontent-dfw5-2.xx&oh=c3607b50bb7f45e450f9d0e29e467278&oe=5F915946" alt="Austin Lambert"
+                    class="img-thumbnail">
+            </div>
+            <!-- About me text -->
+            <div class="col-xs-12 xol-md-8">
+                <!-- About me: Pre-Bootcamp -->
+                <p>
+                    Hello! My name is Austin Lambert, and I am very happy to have you looking at my portfolio! I hail from the not so well known land of South Texas, aka The Valley. Though, through out my childhood I have lived all over the country, ranging from places like
+                    El Paso, to Chicago, to San Diego, and North Dakota. In the mean time, I call Austin home. While here I have enjoyed a multitude of hobbies.
+                </p>
+            </div>
+        </section>
+
+    </main>
 
 
 
