Added font awesome style tag, and made .container class have a set width on all sizes.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2e4f163329.js" crossorigin="anonymous"></script>
 
     <title>About Me</title>
 </head>
@@ -60,15 +61,31 @@
             <!-- Image of me -->
             <div class="col-xs-12 col-md-4">
                 <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/78549358_10218640124867680_136999651332063232_o.jpg?_nc_cat=106&_nc_sid=09cbfe&_nc_ohc=WxKlnNFBGUkAX_blNqx&_nc_ht=scontent-dfw5-2.xx&oh=c3607b50bb7f45e450f9d0e29e467278&oe=5F915946" alt="Austin Lambert"
-                    class="img-thumbnail">
+                    class="about-me-img">
             </div>
             <!-- About me text -->
-            <div class="col-xs-12 xol-md-8">
+            <div class="col-xs-12 col-md-8">
                 <!-- About me: Pre-Bootcamp -->
                 <p>
-                    Hello! My name is Austin Lambert, and I am very happy to have you looking at my portfolio! I hail from the not so well known land of South Texas, aka The Valley. Though, through out my childhood I have lived all over the country, ranging from places like
-                    El Paso, to Chicago, to San Diego, and North Dakota. In the mean time, I call Austin home. While here I have enjoyed a multitude of hobbies.
+                    Hello! My name is Austin Lambert, and I am very happy to have you looking at my portfolio! I hail from the not so well known land of South Texas, aka The Valley. Through out my childhood I have lived all over the country, ranging from places like El Paso,
+                    to Chicago, to San Diego, and North Dakota. In the mean time, I call Austin home. While here I have enjoyed a multitude of hobbies. These include playing video games, DnD, writing, singing, and pretty much anything that keeps me active.
                 </p>
+                <br>
+                <p>
+                    In 2018 I graduated from Texas State University with a Bachelors in Exercise Sports Science. While the original plan was to get my Doctorate of Physical Therapy, I realized that maybe that wasn't the career choice for me. As 2019 came I floated inbetween
+                    jobs, but as luck would have it, I stumbled onto the world of Web Development. Now, as 2020 ravages the Earth with it's constant turmoil, I look to provide a little light at the end of the tunnel for myself. As I go through the prestigious
+                    UT Web Developer bootcamp I plan to hone my skills and become a
+                </p>
+            </div>
+        </section>
+
+        <!-- Social Media Links -->
+        <section class="row">
+            <div class="col-xs-12 col-md-6">
+                <a href="https://www.linkedin.com/in/austin-lambert-73330919a/">LinkedIn</a>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <a href="https://www.facebook.com/Froman212">Facebook</a>
             </div>
         </section>
 
