Added font awesome logos for facebook and linkedin link.

--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
         <!-- Social Media Links -->
         <section class="row">
             <div class="col-xs-12 col-md-6">
+                <i class="fab fa-linkedin"></i>
                 <a href="https://www.linkedin.com/in/austin-lambert-73330919a/">LinkedIn</a>
             </div>
             <div class="col-xs-12 col-md-6">
+                <i class="fab fa-facebook"></i>
                 <a href="https://www.facebook.com/Froman212">Facebook</a>
             </div>
         </section>
