Fixed grammatical errors in About Me section.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p>
                     In 2018 I graduated from Texas State University with a Bachelors in Exercise Sports Science. While the original plan was to get my Doctorate of Physical Therapy, I realized that maybe that wasn't the career choice for me. As 2019 came I floated inbetween
                     jobs, but as luck would have it, I stumbled onto the world of Web Development. Now, as 2020 ravages the Earth with it's constant turmoil, I look to provide a little light at the end of the tunnel for myself. As I go through the prestigious
-                    UT Web Developer bootcamp I plan to hone my skills and become a
+                    UT Web Developer bootcamp I plan to hone my skills and become a respectable and competent Web Developer. I hope you enjoy my work!
                 </p>
             </div>
         </section>
