Added consistent comments acroos html file regarding footer.

--- a/index.html
+++ b/index.html
@@ -94,12 +94,7 @@
     </main>
 
 
-
-
-
-
-
-
+    <!-- Footer -->
     <footer class="footer">
         <small>
             &copy; Copyright 2020 Austin Lambert
