--- a/portfolio.html
+++ b/portfolio.html
@@ -96,10 +96,7 @@
 
 
 
-
-
-
-
+    <!-- Footer -->
     <footer class="footer">
         <small>
             &copy; Copyright 2020 Austin Lambert
