Added images and links to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,15 +56,15 @@
         <!-- Portfolio Contents -->
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+                <a href="https://codyalmand.github.io/Pixel-Picks/"><img src="Images/PixelPicks.png" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+                <a href="https://auslam212.github.io/WeatherDashboard/"><img src="Images/Weather-Dash-Scrn.png" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
         </section>
         <section class="row">
             <div class="col-xs-12 col-md-6">
-                <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
+                <a href="https://auslam212.github.io/Javascript-Password-Generator/"><img src="Images/PasswordGen.png" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
             </div>
             <div class="col-xs-12 col-md-6">
                 <a href="#"><img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail" title="Placeholder"></a>
